[package]
name = "megalinter"
version = "0.1.0"
edition = "2024"
description = "A high-performance, multi-language linter written in Rust"
license = "MIT"
authors = ["MegaLinter Contributors"]
repository = "https://github.com/xhardy/megalinter"
keywords = ["linter", "yaml", "lint", "formatter", "code-quality"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"

# Parallel processing
rayon = "1.10"

# File system
walkdir = "2"
glob = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Output formatting
colored = "2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[[bin]]
name = "megalinter"
path = "src/main.rs"

[lib]
name = "megalinter"
path = "src/lib.rs"
