[package]
name = "fastymllint"
version = "0.1.0"
edition = "2024"
description = "A fast, drop-in replacement for yamllint written in Rust"
license = "GPL-3.0-or-later"
authors = ["fastymllint Contributors"]
repository = "https://github.com/xhardy/fastymllint"
keywords = ["linter", "yaml", "yamllint", "lint", "formatter"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
regex = "1"
walkdir = "2"
ignore = "0.4"
similar = "2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "fastymllint"
path = "src/main.rs"

[lib]
name = "fastymllint"
path = "src/lib.rs"
